WanaLyzer/out/numpy/typing/tests/data/pass/index_tricks.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

AR_LIKE_b: Incomplete
AR_LIKE_i: Incomplete
AR_LIKE_f: Incomplete
AR_LIKE_U: Incomplete
AR_i8: np.ndarray[Any, np.dtype[np.int64]]
