WanaLyzer/out/numpy/typing/tests/data/fail/type_check.pyi
import numpy as np

DTYPE_i8: np.dtype[np.int64]
